--- a/slides/chapter-7-paired-data.Rmd
+++ b/slides/chapter-7-paired-data.Rmd
@@ -118,7 +118,7 @@ Instead of randomly assigning students to each of the two groups, each student w
 
 ## Types of Paired Designs
 
-- **Matching Pairs**: Match individuals based on prior knowledge to create our pairs
+- **Matching Pairs**: Match individuals based on prior knowledge to create our pairs. Use matching pairs if you can't do repeated measures. 
 
   - Match two pigs of the same litter to see which feed will add more fat to the meat
 
@@ -146,7 +146,7 @@ Instead of randomly assigning students to each of the two groups, each student w
 
   - Wait for a drug to leave the body
   
-  - Rest to recover from fatique
+  - Rest to recover from fatigue
 
   
 ---
@@ -261,7 +261,7 @@ Statistics:
   - Matched Pairs: randomize which group goes to one of the subjects in each pair 
   
 - Rest period to eliminate the carry-over effects.
-  - rest from fatique
+  - rest from fatigue
   - wait for drugs/food to leave the body
 
 ---
@@ -390,7 +390,7 @@ Simulation in Matched Pairs Applet:
   
 ---
 class:inverse,middle,center
-# 7.3: Thoery-Based Approach to Analyzing Paired Data
+# 7.3: Theory-Based Approach to Analyzing Paired Data
 
 
 
